Completed the linking of the resource page.
You can access the resource page through the landing page. You can also login and get started from the resource page.

--- a/static/resourcepage/resource.html
+++ b/static/resourcepage/resource.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../images/webBuildr.png">
     <title>Features</title>
-    <link rel="stylesheet" href="features.css">
+    <link rel="stylesheet" href="resource.css">
 </head>
 
 <body>
